--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/dex2code/massa_acheta_alerts#readme",
   "devDependencies": {
+    "@massalabs/massa-web3": "^4.0.3",
     "@types/node": "^20.12.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
