--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx ts-node index.ts"
+    "dev": "npx ts-node index.ts",
+    "build": "npx tsc index.ts",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
