--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Alerting service for MASSA Acheta Radio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx ts-node index.ts",
-    "build": "npx tsc index.ts",
-    "start": "node index.js"
+    "start": "npx ts-node index.ts"
   },
   "repository": {
     "type": "git",
