--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/dex2code/massa_acheta_alerts#readme",
   "devDependencies": {
+    "@types/node": "^20.14.2",
+    "@types/node-telegram-bot-api": "^0.64.6"
+  },
+  "dependencies": {
     "@massalabs/massa-web3": "^4.0.3",
-    "@types/node": "^20.12.13",
+    "node-telegram-bot-api": "^0.66.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
